--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "debounce": "^2.0.0",
     "oidc-client-ts": "^3.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
