--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "oidc-client-ts": "^3.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-oidc-context": "^3.0.0-beta.0"
+    "react-oidc-context": "^3.0.0-beta.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
