deploy: change nginx conf

--- a/default.conf
+++ b/default.conf
@@ -1,19 +1,19 @@
 
 server {
-    listen 8080 default_server;
+    listen 80 default_server;
 
     location / {
         root /var/www/static;
+        try_files $uri $uri/ /index.html;
         index index.html;
     }
 }
 
 server {
-
-    listen 3000 default_server;
+    listen 3000;
 
     location /healthchecks {
         access_log off;
-        return 200 'OK\n';
+        return 200 "OK\n";
     }
 }
