--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "debounce": "^2.0.0",
+    "firebase": "^10.7.1",
     "oidc-client-ts": "^3.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
